--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,14 +1,12 @@
 *{
    box-sizing: border-box;
 }
-
 body{
    padding: 0;
    margin: 0;
    font-family: Arial, Helvetica, sans-serif;
    background: #eeeeee;
 }
-
 h1{
    font-size: 3rem;
    text-align: center;
@@ -55,6 +53,14 @@ main{
    width: 100%;
    box-shadow: 0 0 20px #ccc;
    margin-bottom: 2%;
+   cursor: pointer;
+}
+.item.clicado{
+   background: #d4f6d9;
+}
+.item.clicado .item-nome{
+   text-decoration: line-through;
+   color: gray;
 }
 .item-icone{
    flex:20%;
@@ -79,4 +85,7 @@ main{
    padding: 10px;
    height: 80px;
    width: 100%;
+}
+.mdi-check-circle{
+   color: green;
 }
